--- a/app/views/maps/index.html
+++ b/app/views/maps/index.html
@@ -59,11 +59,12 @@
   var labels = "ABCDEFGHIJKLMNOPQRSTUVWXYZ";
   var labelIndex = 0;
 
-    document
-      .getElementById("btnAddloc")
-      .addEventListener("click", function (event) {
-        console.log(locationInCord);
-      });
+  document
+    .getElementById("btnAddloc")
+    .addEventListener("click", function (event) {
+      location.reload();
+      console.log(window.cookie);
+    });
 
   function initMap() {
     var myLatLng = { lat: 43.4643, lng: -80.5204 };
@@ -78,17 +79,31 @@
       map: Mainmap,
       label: "Home",
     });
-
+    document.cookie = `lat=${lat}`;
+    document.cookie = `lng=${long}`;
   }
-  function addMarker() {
-    // Add the marker at the clicked location, and add the next-available label
-    // from the array of alphabetical characters.
-    // var marker = new google.maps.Marker({
-    //   position: locationInCord,
-    //   label: titleInput,
-    //   map: Mainmap,
-    // });
-    console.log(locationInCord);
+
+  function setCookie(cname, cvalue, exdays) {
+    var d = new Date();
+    d.setTime(d.getTime() + exdays * 24 * 60 * 60 * 1000);
+    var expires = "expires=" + d.toUTCString();
+    document.cookie = cname + "=" + cvalue + ";" + expires + ";path=/";
+  }
+
+  function getCookie(cname) {
+    var name = cname + "=";
+    var decodedCookie = decodeURIComponent(document.cookie);
+    var ca = decodedCookie.split(";");
+    for (var i = 0; i < ca.length; i++) {
+      var c = ca[i];
+      while (c.charAt(0) == " ") {
+        c = c.substring(1);
+      }
+      if (c.indexOf(name) == 0) {
+        return c.substring(name.length, c.length);
+      }
+    }
+    return "";
   }
 
   function checkInput(ob) {
