--- a/app/views/maps/index.html
+++ b/app/views/maps/index.html
@@ -115,6 +115,11 @@
       map: Mainmap,
       label: "Gwinnett Medical Center Emergency Department",
     });
+    var GHSMarker = new google.maps.Marker({
+      position: {lat: 33.751680, lng: -84.382160},
+      map: Mainmap,
+      label: "Grady Health System",
+    });
   }
 
   function setCookie(cname, cvalue, exdays) {
